# duploctl-pipe

./: .devcontainer.json  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  docker-bake.hcl  docker-compose.yml  pipe.yml  pyproject.toml
.github/workflows/: canary.yml  image.yml  package.yml  publish.yml  pull_request.yml  test.yml
pipe/: pipe.py
scripts/: setup.sh
src/: pipe.py
tests/: conftest.py  test_build_schema.py  test_pipe.py
